--- a/KinectForDDR/Kinect4ddr/packages.config
+++ b/KinectForDDR/Kinect4ddr/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="InputSimulatorPlus" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Kinect" version="2.0.1410.19000" targetFramework="net461" />
   <package id="Microsoft.Kinect.Tools.x64" version="2.0.1410.19000" targetFramework="net461" />
 </packages>
